syntax = "proto3";

package org.dependencytrack.storage.v1alpha1;

option java_multiple_files = true;
option java_package = "org.dependencytrack.proto.storage.v1alpha1";

// Metadata of a stored file.
message FileMetadata {
  // Location of the file in URI format.
  // The URI's scheme is the name of the storage provider.
  // Examples: "memory:///foo/bar", "s3://bucket/foo/bar".
  string location = 1;

  // Media type of the file.
  // https://www.iana.org/assignments/media-types/media-types.xhtml
  string media_type = 2;

  // Hex-encoded SHA-256 digest of the file content.
  string sha256_digest = 3;

  // Additional metadata of the storage provider,
  // i.e. values used for integrity verification.
  map<string, string> additional_metadata = 100;
}